# uranus

./: README  README.md  debug_script  openjdk-sgx.vcxproj
ev_test/: JNI_Test.c  JNI_Test.h  TestSuit.java
hotspot/: CMakeLists.txt  copy_enclave.sh
hotspot/enclave_src/cpu/x86/vm/: macroAssembler_x86.cpp  templateTable_x86_64.cpp
hotspot/enclave_src/os/linux/vm/: os_linux.cpp  os_linux.inline.hpp
hotspot/enclave_src/os_cpu/linux_x86/vm/: os_linux_x86.cpp
hotspot/enclave_src/share/PanoplyEnclave/cpp/: sgx_stdlib_util.cpp  sgx_syslog_util.cpp
hotspot/enclave_src/share/PanoplyEnclave/include/: sgx_unistd_util.h
hotspot/enclave_src/share/vm/c0/: C0MapOopEntry.hpp  C0_MacroAssembler.cpp  CompileTask.cpp  Disassembler.cpp  NormalCompileTask.cpp  NormalCompileTask.h  c0_CodeStubs.cpp  c0_Runtime.cpp
hotspot/enclave_src/share/vm/enclave/sc/: EnclaveABI.cpp  EnclaveException.cpp  EnclaveGC.cpp  EnclaveGC.h  EnclaveMemory.cpp  EnclaveMemory.h  EnclaveNative.h  EnclaveOcall.cpp  EnclaveRuntime.cpp  queue.hpp  securecompiler.cpp  securecompiler_u.h
hotspot/enclave_src/share/vm/oops/: instanceKlass.cpp  method.cpp  method.hpp  objArrayKlass.cpp  oop.inline.hpp
hotspot/enclave_src/share/vm/prims/: jvm.cpp  unsafe.cpp
hotspot/enclave_src/share/vm/runtime/: os.hpp  thread.cpp  thread.hpp  threadLocalStorage.hpp
hotspot/enclave_src/share/vm/udis/: types.h
hotspot/enclave_src/share/vm/utilities/: globalDefinitions.hpp
hotspot/make/bsd/makefiles/: gcc.make
hotspot/make/linux/makefiles/: defs.make  enclave.make  gcc.make  rules.make  vm.make
hotspot/make/linux/makefiles/enclave/: securecompiler.edl
hotspot/src/: CMakeLists.txt
hotspot/src/cpu/x86/vm/: frame_x86.cpp  interp_masm_x86_64.cpp  macroAssembler_x86.cpp  macroAssembler_x86.hpp  templateInterpreter_x86_64.cpp  templateTable_x86_64.cpp  vm_version_x86.cpp
hotspot/src/os/linux/vm/: os_linux.cpp  os_linux.hpp  perfMemory_linux.cpp
hotspot/src/os/posix/vm/: os_posix.cpp
hotspot/src/share/PanoplyEnclave/cpp/: sgx_sysepoll_util.cpp
hotspot/src/share/vm/asm/: codeBuffer.hpp
hotspot/src/share/vm/c1/: c1_Compiler.cpp
hotspot/src/share/vm/classfile/: classLoaderData.cpp  javaClasses.cpp  symbolTable.cpp  systemDictionary.cpp  systemDictionary.hpp
hotspot/src/share/vm/code/: codeBlob.cpp  nmethod.cpp  nmethod.hpp
hotspot/src/share/vm/compiler/: compilerOracle.cpp
hotspot/src/share/vm/em/: CompilerEnclave.cpp  PreInterpreterCallStubGenerator.cpp  em_ocall.cpp
hotspot/src/share/vm/enclave/sc/: EnclaveCrypto.cpp  EnclaveDebug.cpp  EnclaveDebug.h  EnclaveException.cpp  EnclaveException.h  EnclaveGC.cpp  EnclaveGC.h  EnclaveMemory.cpp  EnclaveMemory.h  EnclaveNative.cpp  EnclaveNative.h  EnclaveOcall.cpp  EnclaveOcall.h  EnclaveOcallRuntime.cpp  EnclaveOcallRuntime.h  enclave_meta.cpp  enclave_meta.h  securecompiler.config.xml  securecompiler.cpp  securecompiler.edl  securecompiler.h  securecompiler_u.h
hotspot/src/share/vm/gc_implementation/parallelScavenge/: gcTaskManager.hpp  psMarkSweep.cpp  psPromotionManager.cpp  psPromotionManager.hpp  psScavenge.cpp  psScavenge.inline.hpp
hotspot/src/share/vm/gc_interface/: collectedHeap.inline.hpp
hotspot/src/share/vm/interpreter/: abstractInterpreter.hpp  interpreter.cpp  interpreter.hpp  interpreterRuntime.cpp  interpreterRuntime.hpp  linkResolver.cpp  oopMapCache.cpp  templateInterpreter.cpp  templateInterpreter.hpp  templateInterpreterGenerator.hpp  templateTable.cpp
hotspot/src/share/vm/memory/: allocation.cpp  allocation.hpp  resourceArea.cpp  resourceArea.hpp  universe.hpp
hotspot/src/share/vm/oops/: arrayKlass.cpp  arrayKlass.hpp  instanceKlass.cpp  instanceKlass.hpp  klass.cpp  klass.hpp  method.cpp  method.hpp  objArrayKlass.cpp  objArrayKlass.hpp  oop.hpp  oop.inline.hpp
hotspot/src/share/vm/precompiled/: precompiled.hpp
hotspot/src/share/vm/prims/: jni.cpp  jvm.cpp  jvm.h  nativeLookup.cpp  unsafe.cpp
hotspot/src/share/vm/runtime/: arguments.cpp  arguments.hpp  deoptimization.cpp  frame.cpp  frame.hpp  frame.inline.hpp  handles.inline.hpp  init.cpp  interfaceSupport.hpp  jniHandles.cpp  os.cpp  reflection.cpp  synchronizer.cpp  thread.cpp  thread.hpp  vframe.cpp  vframe.hpp  vm_version.cpp
hotspot/src/share/vm/utilities/: debug.cpp  exceptions.cpp  growableArray.hpp
jdk/make/: Import.gmk
jdk/make/lib/: CoreLibraries.gmk
jdk/src/share/native/edu/anonymity/sgx/: Crypto.c  Tools.c
